--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h1{
 .grid-container{
     display: grid;
     grid-template-columns: 3fr 1rem 1fr;
-    grid-template-rows: repeat(2, 5rem) 0.01rem 1rem 2rem;
+    grid-template-rows: repeat(3, 4rem) 1rem 2rem auto;
     grid-gap: 10px; 
 }
 
@@ -57,6 +57,20 @@ h1{
     padding-top:3rem ;
 }
 
+.name1{
+    text-align: right;
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+
+.name2{
+    text-align: right;
+
+}
+.name3{
+    text-align: right;
+    grid-row: 3/4;
+}
 .name{
     text-align: right;
     grid-column: 1/2;
@@ -69,7 +83,7 @@ h1{
 .yellow-line{
     background-color: var(--yelow-line);
     grid-column: 2/3;
-    grid-row: 1/-1;
+    grid-row: 1/6;
 
 }
 .red-line{
@@ -95,7 +109,9 @@ h1{
 }
 
 .me-description{
-    padding: 2rem 
+    padding: 2rem;
+    grid-row: 6/7;
+    grid-column: 1/-1;; 
 }
 .me-description p{
     font-family: 'Roboto', sans-serif;
