--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ h1{
 .proyect-title{
     font-family: 'Alata', sans-serif;
     padding: 1rem 0rem 1rem 0;
+    
 }
 
 .view-proyect{
@@ -243,8 +244,25 @@ h1{
         grid-column: 1/2;
         grid-row: 3/4;
     }
-
+    .proyect-img{
+        max-width:30vw;
+    }
     #proyects{
         margin-top: 10rem;
+        margin-left: 12.5vw;
+        width: 80vw;
+        display: grid;
+        grid-template-columns: repeat(3, auto);
+        grid-template-rows: repeat(5, auto);
+        grid-gap: 10px;
+        justify-content: center;
+        align-items: center;
     }
+    
+    #proyects h1{
+        grid-column: 1/-1;
+        grid-row: 1/2;
+    }
+
+
 }
