--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body{
 }
 
 
-.links a{
+a{
     text-decoration: none;
     color: inherit;
     /* font-family: 'Alatsi', sans-serif; */
@@ -39,16 +39,24 @@ body{
 
 h1{
     font-family: 'Alata', sans-serif;     
-    font-size: 1.75rem;
+    font-size: 2.15rem;
+    text-align: center;
+    text-transform: uppercase;
+    
 }
 
+/* .name1
+.name2
+.name3{
+    font-size: 4rem;
+} */
 .bold{
     font-weight: bold;
 }
 
 .grid-container{
     display: grid;
-    grid-template-columns: 3fr 1rem 1fr;
+    grid-template-columns: 4fr 1.5rem 4.5rem;
     grid-template-rows: repeat(3, 4rem) 1rem 2rem auto;
     grid-gap: 10px; 
 }
@@ -61,25 +69,23 @@ h1{
     text-align: right;
     grid-column: 1/2;
     grid-row: 1/2;
+    align-self: center;
 }
 
 .name2{
     text-align: right;
+    align-self: center;
 
 }
 .name3{
     text-align: right;
     grid-row: 3/4;
-}
-.name{
-    text-align: right;
-    grid-column: 1/2;
-    grid-row: 1/3;
-    font-size: 2.5rem;
     align-self: center;
-    
 }
 
+.hidden{
+    display: none;
+}
 .yellow-line{
     background-color: var(--yelow-line);
     grid-column: 2/3;
@@ -109,13 +115,13 @@ h1{
 }
 
 .me-description{
-    padding: 2rem;
+    padding: 1rem 2rem;
     grid-row: 6/7;
-    grid-column: 1/-1;; 
+    grid-column: 1/-1; 
 }
 .me-description p{
     font-family: 'Roboto', sans-serif;
-    border-top: 0.2rem solid var(--ligth-line) ;
+    border-top: 0.25rem solid var(--ligth-line) ;
     padding-top: 1rem;
 }
 
@@ -137,10 +143,17 @@ h1{
     
 }
 
+.view-repo{
+    border: 3px solid #000000;
+    margin:0.3rem;
+    padding:0.5rem ;
+    cursor: pointer;
+}
+
 .view-proyect{
     border: 3px solid #000000;
     margin:0.3rem;
-    padding:0.5rem 2rem;
+    padding:0.5rem ;
 }
 /* 
 .view-proyect::before{
@@ -168,6 +181,16 @@ h1{
     padding: 0 1rem;
 }
 
+.bold-blue{
+    color:var(--blue-line);
+    border-bottom: 1px solid var(--blue-line);
+}
+
+h3{
+    font-size: 1.15rem;
+    text-transform: uppercase;
+}
+
 @media (min-width: 600px){
     .navbar{
         writing-mode: vertical-rl;
@@ -182,16 +205,15 @@ h1{
         width: 0.1rem;
         height: 4rem;
     }
-    .hidden{
-        display: none;
-    }
+    
     
     .grid-container{
-        /* width: 60vw; */
-        grid-template-columns: auto auto 1.5rem 1rem ;
-        grid-template-rows: 1fr 2.5rem auto;
-        margin: 3rem 25%;
-        transform: rotate(-25deg);
+        grid-template-columns: auto auto 2rem 3.5rem ;
+        grid-template-rows: 5rem 2.5rem auto;
+        margin: 6rem 15%;
+        transform: rotate(-15deg);
+        grid-gap: 1rem;
+       
     }
 
     #me .name1{
@@ -199,15 +221,19 @@ h1{
         grid-row: 1/2;
         text-align: end;
         align-self: center;
-        font-size: 3rem;
+        font-size: 5rem;
+        padding-bottom: 2rem;
+        
     }
 
     .name2{
+        padding-bottom: 2rem;
         grid-row: 1/2;
         grid-column: 2/3;
         text-align: end;
         align-self: center;
-        font-size: 3rem;
+        font-size: 5rem;
+        
     }
 
     .name3{
@@ -215,12 +241,12 @@ h1{
         grid-column: 2/3;
         text-align: end;
         align-self: center;
-        font-size: 3rem;
+        font-size: 5rem;
     }
     .yellow-line{
         grid-column: 1/2;
         grid-row: 2/3;
-        margin: 1rem 0;
+        /* margin: 0.25rem 0; */
         
     }
     .blue-line{
@@ -238,23 +264,29 @@ h1{
         text-transform: uppercase;
         align-self: center;
         justify-self: center;
+        font-size: 4rem;
+        background: -webkit-linear-gradient(right,rgba(238, 238, 238, 0.884), rgb(0, 0, 0));
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
     }
 
     .me-description{
         grid-column: 1/2;
         grid-row: 3/4;
+        min-width: 350px;
+        font-size: 1.5rem;
     }
     .proyect-img{
         max-width:30vw;
     }
     #proyects{
         margin-top: 10rem;
-        margin-left: 12.5vw;
+        margin-left: 11vw;
         width: 80vw;
         display: grid;
         grid-template-columns: repeat(3, auto);
         grid-template-rows: repeat(5, auto);
-        grid-gap: 10px;
+        grid-gap: 1.5rem;
         justify-content: center;
         align-items: center;
     }
@@ -264,5 +296,15 @@ h1{
         grid-row: 1/2;
     }
 
+
+    h1{
+        font-size: 4rem;
+        text-align: center;
+    }
+
+    h3{
+        font-size: 2rem;
+        text-align: center;
+    }
 
 }
