--- a/style.css
+++ b/style.css
@@ -45,11 +45,17 @@ h1{
     
 }
 
-/* .name1
-.name2
-.name3{
-    font-size: 4rem;
-} */
+.site-description{
+    font-family: 'Alata', sans-serif; 
+    /* font-size: 1.75rem;
+    margin: 14rem;*/
+    padding: 1rem; 
+    text-align: center;
+    background-color: rgb(159, 170, 182, 0.4);
+    font-size: 1.5rem;
+
+}
+
 .bold{
     font-weight: bold;
 }
@@ -179,6 +185,11 @@ h1{
 
 .contact-form{
     padding: 0 1rem;
+    font-size: 1.25rem;
+}
+
+.contact-form i{
+    padding: 0 0.5rem;
 }
 
 .bold-blue{
@@ -280,7 +291,7 @@ h3{
         max-width:30vw;
     }
     #proyects{
-        margin-top: 10rem;
+        margin-top: 4rem;
         margin-left: 11vw;
         width: 80vw;
         display: grid;
@@ -305,6 +316,17 @@ h3{
     h3{
         font-size: 2rem;
         text-align: center;
+    }
+
+    .site-description{
+        font-size: 1.75rem;
+        margin: 14rem;
+    }
+
+    .contact-form{
+        font-size: 2rem;
+        flex-direction: row;
+        justify-content: space-around;
     }
 
 }
